Fixed small horizontal scroll issue on body by changing width to 100vw to 100%

--- a/css/app.css
+++ b/css/app.css
@@ -405,7 +405,7 @@ template {
 
 body {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   font-family: "Exo", sans-serif;
   color: #fff;
   font-weight: normal;
