--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -7,7 +7,7 @@
 
 body {
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	@include font-styles($family: $font-stack-exo, $color: $white, $weight: #{normal}, $lh: 1.5);
 	background: $ebony-clay;
 } 
